[sphereCrypt.ini]: Added crypt key for classic client 7.0.82 and enhanced client 4.0.82
[sphere_msgs.scp]: Removed messages 'msg_acc_gused', 'msg_acc_unk', 'msg_acc_guesthit', 'msg_guest', 'charinfo_guest'

29-11-2019, Coruja
Fixed: Field spell items not showing to clients outside multis when OF_OSIMultiSight optional feature is enabled on sphere.ini
Changed: Some changes on spell triggers (@Effect/@Success [spells] / @SpellEffect/@SpellSuccess [chars]) to allow more customization
	-LOCAL.Duration now accept an 2nd argument to return random values (eg: LOCAL.Duration=60 will return 60, and LOCAL.Duration=60,80 will return a random value between 60,80)

01-12-2019, Coruja
Fixed: Chars with STATF_Stone flag can't cast spells anymore.

05-12-2019, Coruja
Fixed: Stat spells not working correctly when custom MAXHITS/MAXMANA/MAXSTAM value is set on char before apply spell effect.
[sphereCrypt.ini]: Added crypt key for classic client 7.0.83 and enhanced client 4.0.83

10-12-2019, Coruja
Added: Support for new 'picinpic' dialog element on clients >= 7.0.80.0.
	-This is used to add sprites pictures on dialogs
	-Syntax: picinpic x y gump spritex spritey width height
	-Eg: picinpic 0 0 09d3b 150 150 30 30 (add background area on 0,0 to 30,30 and add sprite 150,150 from gump 09d3b inside it)
[sphere_dialog.scp]: Added 'picinpic' docs/comments
[items/multis/multis_houses_contest.scp]: Added new houses from publish 106/107
[items/sphere_item_holiday_christmas.scp]: Added new items from publish 107
[items/sphere_item_holiday_other.scp]: Added new items from publish 105
[items/sphere_item_holiday_valentines.scp]: Added new items from publish 107
[items/sphere_item_quests.scp]: Added Jolly Roger items
[items/sphere_item_vice_virtue.scp]: Added new items from publish 107
[systems/sphere_system_treasure_maps.scp]: Fixed treasure maps sometimes getting decoded to unreachable destination

15-12-2019, Coruja
Fixed: Scripts not parsing " " quotes as string correctly.