@@ -241,9 +241,6 @@ StaminaLossAtWeight=150
 // Weight penalty for running +N% of max carry weight (0 = no effect)
 RunningPenalty=50
 
-// Show people joining/leaving the server. 0 disables, 2 enables staff only.
-ArriveDepartMsg=1
-
 // Are house and boat keys newbied automatically
 AutoNewbieKeys=1
 
@@ -258,9 +255,6 @@ PayFromPackOnly=0
 
 // Disable weather effects?
 NoWeather=1
-
-// Set to 1 for items to keep their attr_newbie flag when item is transfered to an NPC
-//AllowNewbTransfer=0
 
 // Default light level in dungeons
 DungeonLight=27
@@ -427,9 +421,6 @@ FlipDroppedItems=0
 
 // Max amount allowed for stackable items (can't be higher than 65535)
 ItemsMaxAmount=60000
-
-// Set to 1 to allow players to take equipment from their pets' paperdoll
-CanUndressPets=1
 
 // Monsters run when scared of death
 MonsterFear=0
