@@ -359,9 +359,6 @@ MSG(MSG_ACC_PRIV,						"You are not privileged to do that")
 MSG(MSG_ACC_ACCEPTPASS,					"Password has been set.")
 MSG(MSG_ACC_INVALIDPASS,				"Invalid password.")
 MSG(MSG_ALREADYONLINE,					"Already online")
-MSG(MSG_ARRDEP_1,						"%s has %s %s.")
-MSG(MSG_ARRDEP_2,						"arrived in")
-MSG(MSG_ARRDEP_3,						"departed from")
 MSG(MSG_BOUNCE_PACK,					"in your pack")
 MSG(MSG_CANTPUSH,						"You are not strong enough to push %s out of the way.")
 MSG(MSG_CORPSE_NPC,						"%s corpse")
@@ -490,7 +487,6 @@ MSG(MSG_SERV_SHUTDOWN,					"Server going down in %lld minute(s).")
 MSG(MSG_SERV_SHUTDOWN_CANCEL,			"Shutdown has been interrupted.")
 MSG(MSG_SERV_SHUTDOWN_SOON,				"WARNING: The system is scheduled to shutdown soon")
 MSG(MSG_SHIPNAME_PROMT,					"What dost thou wish to name thy ship?")
-MSG(MSG_STEAL,							"That is not yours. You will have to steal the item")
 MSG(MSG_TARG_LINK,						"First object must be a dynamic item, try again.")
 MSG(MSG_TARG_LINK_SAME,					"That's the same object. Link cancelled.")
 MSG(MSG_TARG_LINK2,						"What do you want to link it to ?")
